--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Montserrat:wght@100&display=swap');
+@import '../node_modules/react-alice-carousel/lib/alice-carousel.css';
 
 body {
   margin: 0;
